# job-finder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
jobfinder/: __init__.py  cli.py  fit.py  listings.py  pipeline.py  reporter.py  schemas.py  scoring.py
jobfinder/a2a/: __init__.py  contract.py  graph.py  orchestrator.py  service.py
jobfinder/jobsearch/: __init__.py  __main__.py  cli.py  contacts.py  email_format.py  match.py  models.py  normalize.py  outreach.py  profile.py  rerank.py  store.py
jobfinder/jobsearch/sources/: __init__.py  eml_dir.py  gmail.py  gmail_send.py  linkedin_email.py
jobfinder/signals/: __init__.py  ats_hiring.py  extraction.py  form_d.py  sec_8k.py
jobfinder/sources/: __init__.py  ats.py  edgar.py  enrichment.py  firmographics.py
jobfinder/store/: __init__.py  db.py
tests/: test_a2a.py  test_ats_hiring_signal.py  test_ats_pipeline.py  test_ats_source.py  test_cli.py  test_edgar.py  test_enrichment_source.py  test_extraction.py  test_firmographics_source.py  test_fit.py  test_form_d_signal.py  test_form_d_source.py  test_listings.py  test_main.py  test_reporter.py  test_schemas.py  test_scoring.py  test_sec_8k_signal.py  test_store.py
tests/fixtures/: 8k_item502_apple.txt  ashby_jobs.json  form_d_sample.xml  greenhouse_jobs.json  lever_postings.json  submissions_form_d.json  submissions_sample.json
tests/jobsearch/: test_cli.py  test_cli_contacts.py  test_cli_outreach.py  test_contacts.py  test_contacts_store.py  test_drafts_store.py  test_email_format.py  test_gmail.py  test_gmail_send.py  test_linkedin_email.py  test_match.py  test_normalize.py  test_outreach.py  test_rerank.py  test_store.py
tests/jobsearch/fixtures/: li_alert_html_no_anchors.eml  li_alert_multi.eml  li_alert_plaintext.eml  li_alert_single.eml  not_a_job.eml
