[project]
name = "job-finder"
version = "0.1.0"
description = "Multi-agent system for surfacing hidden-market job opportunities from hiring, funding, and executive-transition signals"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14.5"
dependencies = [
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
