[project]
name = "job-finder"
version = "0.1.0"
description = "Multi-agent system for surfacing hidden-market job opportunities from hiring, funding, and executive-transition signals"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14.5"
dependencies = [
    "google-genai>=2.7.0",
    "groq>=1.4.0",
    "ipykernel>=7.2.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
